# DSR

./: .gitattributes  .gitignore  DSR.pyproj  DSR.sln  DSR.spec  MANIFEST  MANIFEST.in  README  README.md  ablauf.gv  afix.py  atomhandling.py  atoms.py  cf3fit.py  constants.py  dbfile.py  density.py  dsr  dsr-shelxle.bat  dsr.bat  dsr.profile  dsr.py  dsr.py.pstats  dsr_TEST_p21c.res  dsr_db.txt  dsrparse.py  elements.py  export.py  make_release.sh  match.py  misc.py  new_graph.bat  olex_dsr_db.txt  options.py  p21c.ins  p21c.lst  p21c.res  p21n_cf3.hkl  p21n_cf3.res  pngcanvas.py  (+19 more)
docs/: DSR-manual.md  conf.py  dsr.rst  index.rst
example/: p21c-step2.ins  p21c.ins  p21c.res  p21c_final.res  p21c_new.res  p21c_step0.res  p21c_step1.res  p21c_step2.ins  p21c_step2.res  p21c_step3.res  p21n_cf3.ins  p21n_cf3.res
fit/: QuatfitPy-NEW.py  calculate_rmsd.py  quatfit.py
manuals/: DSR-Program_flow_better.pptx  DSR-ablauf.pptx  DSR-manual.docx  dbfrags.cdx  shelx-definition.txt  shelx-fileparser.txt  wokflow.pptx
mpmath/: ctx_mp_python.py
networkx/: __init__.py  convert.py
old/: dsr.py
pictures/: 12-dichlorobenz-PUCJIH.res  12-dichlorobenz.cdx  12-dichlorobenz.res  12-difluorobenz.cdx  12-difluorobenz.res  12c4.cdx  18c6.cdx  26dcb.cdx  26dpa.cdx  9-bromphen.cds  9-bromphen.cdx  DSR-fragments.cdx  NEt4+.cdx  NEt4+.res  NMe4+.cdx  Nbt4+.cdx  QEHPOL.res  acetate-LIBXUR.res  acetate.cdx  acetate.res  acetone-HIXHIF05.res  acetone-HIXHIF05_EXPORTED.res  acetone.cdx  acetone.res  acetonitrile-CISDOZ.res  acetonitrile.cdx  acetonitrile.res  adamantane.cdx  adamantane.res  alfal.cdx  anthracene.cdx  benzene-UGEDEQ.res  benzene.cdx  benzene.res  bf4.cdx  bf4.res  bipyridine-DOCYEB.res  bipyridine.cdx  bipyridine.res  butane.cdx  (+190 more)
rmsd/: calculate_rmsd.py  match.py  quatfit.py
scripts/: DSR.spec  bildconvert.py  bildererstellung.txt  convertpng2pdf.bat  dsr  mac_package.py  make_zipfile.py  profiling.bat  update-dsr-T60.bat  update-dsr-hause.bat  update-dsr.bat  upload_to_pypi.sh  upload_to_test-pypi.sh
setup/: DSR-linux.spec  DSR.spec  OlexDSR.py  build_linux_distrib.sh  custom.xld  dsr-install.iss  dsr-linux  dsr-linux.spec  dsr-mac  dsr.pth  dsr.sh  grade_import.sh  make_linuxdist.bat  make_pictures.sh  make_win_release.bat  make_win_release.py  make_zipfile.py  pyinstaller_exe.bat  rpmrc  set_environ.py  version_numbers.py
src/: afix.py  atomhandling.py  atoms.py  cf3fit.py  constants.py  dbfile.py  dsrparse.py  export.py  misc.py  options.py  (+6 more)
(+331 files in other folders)
