[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsr_shelx"
version = "237"
authors = [
    { name = "Daniel Kratzert", email = "dkratzert@gmx.de" },
]
description = "A program to model disorder in small-molecule X-ray structures"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://dkratzert.de/dsr.html"
"Bug Tracker" = "https://github.com/dkratzert/DSR/issues"

[tool.hatch.build.targets.sdist]
only-include = ["src/dsr_shelx"]
sources = ["src"]
exclude = [
    "/.github",
    "/pictures",
    "/scripts",
    "/setup",
    "/tests",
    "/manuals",
    "/olex_dsr_db.txt",
    "/requirements-devel.txt",
    "/requirements.txt",
    "/make_release.sh",
    "/venv*",
]

[project.scripts]
dsr = "dsr_shelx.dsr:main"