[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project]
name = "dsr_shelx"
dynamic = ["version", "dependencies"]
authors = [
    { name = "Daniel Kratzert", email = "dkratzert@gmx.de" },
]
description = "A program to model disorder in small-molecule X-ray structures"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://dkratzert.de/dsr.html"
"Bug Tracker" = "https://github.com/dkratzert/DSR/issues"

[tool.hatch.version]
path = "src/dsr_shelx/version.py"
pattern = "VERSION\\s*=\\s*'(?P<version>\\d+\\.{0,1}\\d{0,1})'"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/pictures",
    "/scripts",
    "/setup",
    "/tests",
    "/manuals",
    "/olex_dsr_db.txt",
    "/requirements-devel.txt",
    "/make_release.sh",
    "/venv*",
]

[project.scripts]
dsr = "dsr_shelx.dsr:main"